smarter type system

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Sebastian Langer <sl@scn.cx>",
   "license": "MIT",
   "dependencies": {
+    "clang-format": "^1.0.55",
     "commander": "^2.11.0",
     "mkdirp": "^0.5.1",
     "p-all": "^1.0.0",
     "p-each-series": "^1.0.0",
     "p-map": "^1.2.0",
+    "prettier": "^1.7.1",
     "recursive-copy": "^2.0.6",
     "request": "^2.81.0",
     "rimraf": "^2.6.2",
@@ -28,6 +30,7 @@
     "@types/p-all": "^1.0.0",
     "@types/p-each-series": "^1.0.0",
     "@types/p-map": "^1.1.0",
+    "@types/prettier": "^1.7.0",
     "@types/rimraf": "0.0.28",
     "@types/xml2js": "^0.4.0",
     "@types/yargs": "^8.0.1",
