--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sebastian Langer <sl@scn.cx>",
   "license": "MIT",
   "dependencies": {
+    "bindings": "^1.3.0",
     "clang-format": "^1.0.55",
     "commander": "^2.11.0",
     "mkdirp": "^0.5.1",
@@ -20,6 +21,7 @@
     "recursive-copy": "^2.0.6",
     "request": "^2.81.0",
     "rimraf": "^2.6.2",
+    "typescript": "^2.5.3",
     "wordwrap": "^1.0.0",
     "xml2js": "^0.4.17",
     "yargs": "^8.0.2"
